Bard is now available in EU

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="centered">
-      <h2>NO</h2>
+      <h2>YES</h2>
     </div>
 
     <p class="disclaimer centered">
